evidence_library/EC2/regions/ap-southeast-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0572a77e67890dac1",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0bc3cb7a49b4dc7b0",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:111111111111:security-group/sg-0572a77e67890dac1",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0572a77e67890dac1"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "e4af6905-8ac7-485e-b6c4-8825011b6d81",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "e4af6905-8ac7-485e-b6c4-8825011b6d81",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "965",
            "date": "Fri, 06 Feb 2026 16:25:17 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
